# Adwaifeh

./: Cargo.toml  README.md  meson.build  org.randev.Adwaifeh.json
data/: meson.build  org.randev.Adwaifeh.appdata.xml.in  org.randev.Adwaifeh.desktop.in  org.randev.Adwaifeh.gschema.xml
data/icons/: meson.build
po/: POTFILES  meson.build
src/: adwaifeh.gresource.xml  application.rs  config.rs  main.rs  meson.build  window.blp  window.rs  window.ui
