[package]
name = "adwaifeh"
version = "0.1.0"
edition = "2018"

[dependencies]
gettext-rs = { version = "0.7", features = ["gettext-system"] }
timer = "0.2.0"
libadwaita = "0.1.0"
image = { version = "0.23.14", default-features = false, features=["gif"] }
once_cell = "1.4.0"

gtk-macros = "0.2.0"



[dependencies.gtk]
package = "gtk4"
version = "0.4.2"

